force-app/main/default/objects/Appointment_Communication__c/Appointment_Communication__c.object-meta.xml
<CustomObject>
    <description>Log of appointment confirmation, reminder, and print communications sent to patients.</description>
    <label>Appointment Communication</label>
    <nameField>
        <displayFormat>COMM-{00000000}</displayFormat>
        <label>Communication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Communications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>