force-app/main/default/objects/Appointment_Communication__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>