force-app/main/default/objects/Appointment_Communication__c/fields/Appointment_Start__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Start__c</fullName>
    <description
  >Appointment start at the time this notification was requested; scopes duplicate prevention and retries to one occurrence.</description>
    <label>Appointment Start</label>
    <type>DateTime</type>
</CustomField>