force-app/main/default/objects/Appointment_Communication__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Appointment Communications</relationshipLabel>
    <relationshipName>Appointment_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>