force-app/main/default/objects/Appointment_Communication__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
                <default>true</default>
                <label>Automated</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>