force-app/main/default/objects/Appointment_Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment__c</columns>
    <columns>Patient__c</columns>
    <columns>Type__c</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>Sent_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>